--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,90 @@
 version: '3.6'
 
 services:
+
+  prometheus:
+    image: prom/prometheus:v2.21.0
+    container_name: prometheus
+    ports:
+      - 9000:9090
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prometheus-data:/prometheus
+    command: 
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    
+  # grafana:
+    # image: grafana/grafana:6.7.2
+    # container_name: grafana
+    # volumes:
+      # - grafana_data:/var/lib/grafana
+      # - ./grafana:/etc/grafana
+    # ports:
+      # - 3000:3000
+
+  Elasticsearch:
+    image: elasticsearch:7.17.3
+    container_name: elasticsearch
+    restart: always
+    volumes:
+    - elastic_data:/usr/share/elasticsearch/data/
+    environment:
+      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+      discovery.type: single-node    
+    ports:
+    - '9200:9200'
+    - '9300:9300'
+    networks:
+      - elk
+
+  Logstash:
+    image: logstash:7.17.0
+    container_name: logstash
+    restart: always
+    volumes:
+    - ./config:/logstash
+    command: logstash -f /logstash/logstash.conf 
+    depends_on:
+      - Elasticsearch
+    ports:
+    - '9600:9600'
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"    
+    networks:
+      - elk
+
+  Kibana:
+    image: kibana:7.17.3
+    container_name: kibana
+    restart: always       
+    ports:
+    - '5601:5601'
+    environment:
+      - ELASTICSEARCH_URL=http://localhost:9200  
+    depends_on:
+      - Elasticsearch  
+    networks:
+      - elk
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+    - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+    - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'false'
+      KAFKA_CREATE_TOPICS: "message"
+  
   tweetAppService:
     image: themananshah/tweet-app-service
     container_name: tweet-app-service
@@ -18,101 +102,11 @@ services:
       - kafka_network
     depends_on:
       - tweetAppService   
-      
-  prometheus:
-    image: prom/prometheus:v2.30.3
-    ports:
-      - 9000:9090
-    volumes:
-      - ./config/prometheus.yml:/etc/prometheus
-      - prometheus-data:/config/prometheus.yml
-    command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml  
-  
-#  zookeeper:
-#    image: confluentinc/cp-zookeeper:7.1.1
-#    hostname: zookeeper
-#    container_name: zookeeper
-#    ports:
-#      - "2181:2181"
-#    environment:
-#      ZOOKEEPER_CLIENT_PORT: 2181
-#      ZOOKEEPER_TICK_TIME: 2000
-#      
-#  broker:
-#    image: confluentinc/cp-server:7.1.1
-#    hostname: broker
-#    container_name: broker
-#    depends_on:
-#      - zookeeper
-#    ports:
-#      - "9092:9092"
-#      - "9101:9101"
-#    environment:
-#      KAFKA_BROKER_ID: 1
-#      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
-#      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-#      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1
-#      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-#      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-#      KAFKA_JMX_PORT: 9101
-#      KAFKA_JMX_HOSTNAME: localhost
-#      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:8081
-#      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:29092
-#      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
-#      CONFLUENT_METRICS_ENABLE: 'true'
-#      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
-  Elasticsearch:
-    image: elasticsearch:7.16.2
-    container_name: elasticsearch
-    restart: always
-    volumes:
-    - elastic_data:/usr/share/elasticsearch/data/
-    environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      discovery.type: single-node    
-    ports:
-    - '9200:9200'
-    - '9300:9300'
-    networks:
-      - elk
-
-  Logstash:
-    image: logstash:7.16.2
-    container_name: logstash
-    restart: always
-    volumes:
-    - ./config/logstash.conf:/logstash_dir
-    command: logstash -f /logstash_dir/logstash.conf 
-    depends_on:
-      - Elasticsearch
-    ports:
-    - '9600:9600'
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"    
-    networks:
-      - elk
-
-  Kibana:
-    image: kibana:7.16.2
-    container_name: kibana
-    restart: always       
-    ports:
-    - '5601:5601'
-    environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200  
-    depends_on:
-      - Elasticsearch  
-    networks:
-      - elk
      
 volumes:
   prometheus-data:
-  elastic_data: {}
+  elastic_data:
+  grafana_data:
   
 networks:
   kafka_network:
